Se comenzo a crear el constructor de querys

--- a/.htaccess
+++ b/.htaccess
@@ -2,6 +2,12 @@ RewriteEngine on
 # URL AMIGABLE
 	RewriteCond %{REQUEST_FILENAME} !-d
 	RewriteCond %{REQUEST_FILENAME} !-f
-	RewriteRule ^([a-zA-Z0-9/_]+)$ index.php?view=$1
+	RewriteRule ^([a-zA-Z0-9/_]+)$ index.php?vista=$1
 # URL AMIGABLE
 Options -Indexes
+
+<Files .env>
+order allow,deny
+deny from all
+</Files>
+
