--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
-SIS_STATUS=TRUE OR FALSE
+SIS_STATUS=TRUE
 
-DATABASE_SERVER=SERVERDATABASE
-DATABASE_DB=DATABASE
-DATABASE_USER=DATABASEUSER
-DATABASE_PASS=DATABASEPASS
+DATABASE_SERVER=mysql
+DATABASE_DB=localhost
+DATABASE_USER=homestead
+DATABASE_PASS=homestead
 
 API_KEY=APIKEY
